# parallel-monte-carlo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml  deny.toml  flake.nix  justfile  rust-toolchain.toml
algorithm/: Cargo.toml
algorithm-c/: algorithm.hpp  main.cpp
bend/: main.bend
cpp/: main.cpp
cpp/algorithm/: adaptive.hpp  importance.hpp  monte.hpp  quasi.hpp  stratified.hpp
cpp/algorithm/adaptive/: basic.hpp
cpp/algorithm/importance/: basic.hpp
cpp/algorithm/monte/: basic.hpp  cuda.hpp  mpi.hpp  omp.hpp  openmp.hpp
cpp/algorithm/quasi/: basic.hpp
cpp/algorithm/stratified/: basic.hpp
cpp/include/: adaptive.h  importance.h  monte.h  quasi.h  stratified.h
cpp/src/: adaptive.cpp  importance.cpp  monte.cpp  quasi.cpp  stratified.cpp
cpp/util/: random.hpp  statistics.hpp  timer.hpp  type.hpp
fortran/: fpm.toml
fortran/app/: main.f90
fortran/src/: base.f90  demo.f90  fortran.f90  importance.f90  monte.f90  quasi.f90  stratified.f90
frontend/: Cargo.toml
julia/: main.jl  test.jl
master/: Cargo.toml
ppt/: PPT.typ  algorithm.typ  engine.typ  ppt.typ  summerize.typ  work.typ
report/: report.typ
rust/: Cargo.toml
src/: hybrid.f90  normal.f90  omp.f90
worker/: Cargo.toml
