[package]
name = "worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
algorithm = { path = "../algorithm" }
hvm = { version = "2.0.22", features = ["cuda"] }
bend-lang = "0.2.37"
quiche = "0.22.0"
